joke eto na tlga

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         document.addEventListener("DOMContentLoaded", () => {
             const containerIds = ["bear-container", "bear-container1", "bear-container2"];
 
-            const isMobile = window.innerWidth < 768; // --- Configuration (Set up based on screen size) --- 
+            const isMobile = window.innerWidth < 768;
             let MIN_SIZE = 160;
             let MAX_SIZE = 320;
             let MIN_SPEED = 7000;
