--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="900">
                     <img loading="lazy" src="img/assets/gifts/11.png" alt="" class="rounded-2xl max-md:w-1/2">
-                    <span class="font-extrabold text-lg">Clothers for 12 months up</span>
+                    <span class="font-extrabold text-lg">Clothes for 12 months up</span>
                 </div>
                 <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="900">
@@ -194,7 +194,7 @@
             <br><br>
             Kindly RSVP by <strong>December 05, 2025</strong> so we can secure your spot in this sweet, cozy affair!
         </p>
-        <div class="flex flex-col items-center gap-2 mt-2" data-aos="fade-up" data-aos-duration="2000"
+        <div class="flex flex-col items-center gap-2 mt-2 z-10" data-aos="fade-up" data-aos-duration="2000"
             data-aos-delay="700">
             <span class="font-extrabold block md:text-2xl max-md:text-xl">
                 Please RSVP to Mommy via:
