--- a/index.html
+++ b/index.html
@@ -84,14 +84,18 @@
                 <div class="flex flex-col md:w-[30%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="600">
                     <img loading="lazy" src="img/assets/events/church.png" alt="" class="rounded-2xl max-md:w-1/2">
-                    <span class="font-extrabold text-lg">Holy Cross Parish - Amparo</span>
-                    Mangga corner Macabud Streets, Amparo Village, Caloocan, Philippines
+                    <a href="https://maps.app.goo.gl/qGozgP9kADMCPzRa6" target="_blank">
+                        <span class="font-extrabold text-lg">Holy Cross Parish - Amparo</span>
+                        Mangga corner Macabud Streets, Amparo Village, Caloocan, Philippines
+                    </a>
                 </div>
                 <div class="flex flex-col md:w-[30%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="900">
                     <img loading="lazy" src="img/assets/events/utensils.png" alt="" class="rounded-2xl max-md:w-1/2">
-                    <span class="font-extrabold text-lg">Trish Ville Private Resort</span>
-                    Amparo Subd, Lot 11 Banaba, Caloocan, Metro Manila
+                    <a href="https://maps.app.goo.gl/Jizqde1xbaz9wKwq7" target="_blank">
+                        <span class="font-extrabold text-lg">Trish Ville Private Resort</span>
+                        Amparo Subd, Lot 11 Banaba, Caloocan, Metro Manila
+                    </a>
                 </div>
             </div>
         </div>
