--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     data-aos-duration="2000" data-aos-delay="600">
                     <img loading="lazy" src="img/assets/events/church.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <a href="https://maps.app.goo.gl/qGozgP9kADMCPzRa6" target="_blank">
-                        <span class="font-extrabold text-lg">Holy Cross Parish - Amparo</span>
+                        <span class="font-extrabold text-lg underline">Holy Cross Parish - Amparo</span>
                         Mangga corner Macabud Streets, Amparo Village, Caloocan, Philippines
                     </a>
                 </div>
@@ -93,7 +93,7 @@
                     data-aos-duration="2000" data-aos-delay="900">
                     <img loading="lazy" src="img/assets/events/utensils.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <a href="https://maps.app.goo.gl/Jizqde1xbaz9wKwq7" target="_blank">
-                        <span class="font-extrabold text-lg">Trish Ville Private Resort</span>
+                        <span class="font-extrabold text-lg underline">Trish Ville Private Resort</span>
                         Amparo Subd, Lot 11 Banaba, Caloocan, Metro Manila
                     </a>
                 </div>
@@ -203,15 +203,9 @@
             <span class="font-extrabold block md:text-2xl max-md:text-xl">
                 Please RSVP to Mommy via:
             </span>
-            <a href="https://www.facebook.com/dyj0617" target="_blank"
-                class="flex items-center gap-2 text-[#822c2d] hover:text-[#5c1f20]">
-                <i class="fa-brands fa-facebook-square fa-xl"></i>
-                <span class="md:text-2xl max-md:text-xl">Nicole Barrozo</span>
-            </a>
-
             <a href="tel:+639940913990" class="flex items-center gap-2 text-[#822c2d] hover:text-[#5c1f20]">
                 <i class="fa-solid fa-phone fa-xl"></i>
-                <span class="md:text-2xl max-md:text-xl">+63 9940913990</span>
+                <span class="md:text-2xl max-md:text-xl underline">+63 9940913990</span>
             </a>
 
         </div>
